Fix SLA table header contrast

--- a/soporte/static/soporte/css/styles.css
+++ b/soporte/static/soporte/css/styles.css
@@ -311,6 +311,10 @@ body {
     color: #495057;
 }
 
+.table-custom thead.table-dark th {
+    color: #fff;
+}
+
 .table-header-inverse th {
     background-color: #000;
     color: #fff !important;
